Ikamva service 100 percent test coverage and servive implementation refactoring